--- a/rest-client/public/locales/bg/translation.json
+++ b/rest-client/public/locales/bg/translation.json
@@ -1,6 +1,5 @@
 {
-  "brand": "Български Боксер клуб",
-  "nav.Dogs": "Нашите кучета",
+  "nav.Language": "Език",
   "nav.Dog": "Регистрирай куче",
   "nav.DogPedigree": "Регистрирай куче с родословие",
   "nav.DogNewborn": "Регистрирай новородено куче",
