--- a/rest-client/public/locales/en/translation.json
+++ b/rest-client/public/locales/en/translation.json
@@ -1,6 +1,5 @@
-{
-  "brand": "Boxer Club Bulgaria",
-  "nav.Dogs": "Our Dogs",
+{  
+  "nav.Language": "Language",
   "nav.Dog": "Register your dog",
   "nav.DogPedigree": "Register dog with pedigree",
   "nav.DogNewborn": "Register newborn dog",
