--- a/rest-client/public/locales/bg/translation.json
+++ b/rest-client/public/locales/bg/translation.json
@@ -1,33 +1,9 @@
 {
   "nav.Language": "Език",
-  "nav.Dog": "Регистрирай куче",
-  "nav.DogPedigree": "Регистрирай куче с родословие",
-  "nav.DogNewborn": "Регистрирай новородено куче",
-  "nav.DogChangeOwner": "Заяви смяна на собственост",
-  "nav.Events": "Събития",
-  "nav.Events.Upcoming": "Предстоящи",
-  "nav.Events.Bulgarian": "В България",
-  "nav.Events.International": "Международни",
-  "nav.Events.Passed": "Отминали",
-  "nav.Events.AddEvent": "Добави събитие",
-  "nav.Regulations": "Регламенти",
-  "nav.Regulations.ActOfIncorporation": "Устав на клуба",
-  "nav.Regulations.BreedingRules": "Правила за развъдна дейност",
-  "nav.Regulations.Standard": "Стандарт",
-  "nav.Regulations.WorkingExams": "Изпити за работни кучета",
-  "nav.Regulations.CompanionDog": "Тест за куче-компаньон",
-  "nav.Regulations.Schutzhund": "  Охрана ",
-  "nav.Regulations.EnduranceTest": "Тест за издръжливост",
-  "nav.Links": "Полезни връзки",
-  "nav.Links.CanineOrganizations": "Киноложки организации",
-  "nav.Links.BoxerClub": "Боксер клубове",
-  "nav.Links.AddLink": "Добави връзка",
-  "nav.Contacts": "Контакти",
-  "nav.Contacts.AddContact": "Добави контакт",
-  "nav.Gallery": "Галерия",
-  "nav.MembersArea": "Членство",
-  "nav.MembersArea.Login": "Вход",
+  "nav.Family": "Създай семейство",
+  "nav.Login": "Вход",
   "nav.MembersArea.Register": "Регистрация",
+  "nav.MembersArea.Login": "Вход",
   "nav.MembersArea.Edit": "Редакция",
   "nav.Delete": "Изтрий",
   "nav.Edit": "Редактирай",
@@ -35,9 +11,7 @@
   "nav.Picture": "Снимка",
   "nav.Pedigree": "Родословие",
   "nav.MembersArea.Profile": "Профил",
-  "nav.MembersArea.AddDog": "Добави куче",
   "nav.MembersArea.Logout": "Изход",
-
   "nav.MembersArea.AllUsers": "Всички потребители",
   "email": "Имейл адрес",
   "forms.Login.Validation": "Имейл адресът или паролата са невалидни.",
@@ -46,7 +20,7 @@
   "forms.NewPassword": "Нова парола",
   "forms.ConfirmPassword": "Потвърди парола",
   "name": "Име и Фамилия",
-
+  "familyName": "Име на семейството",
   "fullName": "Имена",
   "country": "Държава",
   "city": "Град",
@@ -117,7 +91,7 @@
   "RegisterFather": "Регистрирай баща",
   "UploadPedigree": "Родословие",
   "RegisterSuccess": "Успешна регистрация",
-  "RegisterUserSuccess": "Вие се регистрирахте успешно, моля проверете имейла си за активация.",
+  "RegisterUserSuccess": "Вие се регистрирахте успешно. Моля, влезте в профила си!",
   "Success": "Успешна операция",
   "ChangePasswordSuccess": "Вашата парола е сменена успешно, моля влезте в профила си!",
   "EditUserSuccess": "Вашият профил е променен успешно,  моля влезте в профила си!",
