--- a/rest-client/public/locales/en/translation.json
+++ b/rest-client/public/locales/en/translation.json
@@ -1,30 +1,6 @@
-{  
+{
   "nav.Language": "Language",
-  "nav.Dog": "Register your dog",
-  "nav.DogPedigree": "Register dog with pedigree",
-  "nav.DogNewborn": "Register newborn dog",
-  "nav.DogChangeOwner": "Change ownership",
-  "nav.Events": "Events",
-  "nav.Events.Upcoming": "Upcoming",
-  "nav.Events.Bulgarian": "Bulgarian",
-  "nav.Events.International": "International",
-  "nav.Events.Passed": "Passed",
-  "nav.Events.AddEvent": "Add Event",
-  "nav.Regulations": "Regulations",
-  "nav.Regulations.ActOfIncorporation": "Act of Incorporation",
-  "nav.Regulations.BreedingRules": "Breeding Rules",
-  "nav.Regulations.Standard": "Standard",
-  "nav.Regulations.WorkingExams": "Working Exams",
-  "nav.Regulations.CompanionDog": "Companion Dog",
-  "nav.Regulations.Schutzhund": "Schutzhund",
-  "nav.Regulations.EnduranceTest": "Endurance Test",
-  "nav.Links": "Links",
-  "nav.Links.CanineOrganizations": "Canine Organisations",
-  "nav.Links.BoxerClub": "Boxer Clubs",
-  "nav.Links.AddLink": "Add link",
-  "nav.Contacts": "Contacts",
-  "nav.Contacts.AddContact": "Add Contact",
-  "nav.Gallery": "Gallery",
+  "nav.Family": "Create family",
   "nav.MembersArea": "Membership",
   "nav.MembersArea.Login": "Login",
   "nav.MembersArea.AddDog": "Add Dog",
@@ -50,7 +26,7 @@
   "forms.NewPassword": "New Password",
   "forms.ConfirmPassword": "Confirm Password",
   "name": "Full Name",
-
+  "familyName": "Family Name",
   "fullName": "Full Name",
   "country": "Country",
   "city": "City",
@@ -116,7 +92,7 @@
   "RegisterFather": "Register father",
   "UploadPedigree": "Upload pedigree",
   "RegisterSuccess": "Registration is successful",
-  "RegisterUserSuccess": "You have registered successfully, please check your email for activation!",
+  "RegisterUserSuccess": "You have registered successfully, please login!",
   "ChangePasswordSuccess": "You have successfully changed your password, please login!",
   "EditUserSuccess": "You have successfully changed your details, please login!",
   "Success": "Success",
