--- a/rest-client/public/locales/bg/translation.json
+++ b/rest-client/public/locales/bg/translation.json
@@ -1,7 +1,15 @@
 {
   "nav.Language": "Език",
   "nav.Family": "Създай семейство",
+  "countOfMembers": "Брой на членове в семейството",
+  "Family Member": "Член на семейството",
+  "nickName": "Име / Псевдоним",
+  "pin": "PIN код",
+  "select": "Изберете",
+  "familyRole": "Роля",
+  "ageCategory": "Възрастова категория",
   "nav.Login": "Вход",
+  "nav.Members.AddMember": "Добави член",
   "nav.MembersArea.Register": "Регистрация",
   "nav.MembersArea.Login": "Вход",
   "nav.MembersArea.Edit": "Редакция",
@@ -19,7 +27,7 @@
   "forms.OldPassword": "Стара парола",
   "forms.NewPassword": "Нова парола",
   "forms.ConfirmPassword": "Потвърди парола",
-  "name": "Име и Фамилия",
+  "name": "Име",
   "familyName": "Име на семейството",
   "fullName": "Имена",
   "country": "Държава",
@@ -36,7 +44,6 @@
   "forms.Button.RegisterDog": "Регистрирай куче и продължи",
   "forms.Button.EditDog": "Запази промените",
   "forms.Button.Approve": "Одобри",
-
   "registrationNum": "Номер на племенната книга",
   "picture": "Качете снимка",
   "sex": "Пол",
