--- a/rest-client/public/locales/en/translation.json
+++ b/rest-client/public/locales/en/translation.json
@@ -1,6 +1,14 @@
 {
   "nav.Language": "Language",
   "nav.Family": "Create family",
+  "countOfMembers": "Count of family members",
+  "Family Member": "Family Member",
+  "nav.Members.AddMember": "Add member",
+  "nickName": "Name / Nickname",
+  "pin": "PIN Code",
+  "select": "Select",
+  "familyRole": "Family Role",
+  "ageCategory": "Age Category",
   "nav.MembersArea": "Membership",
   "nav.MembersArea.Login": "Login",
   "nav.MembersArea.AddDog": "Add Dog",
@@ -25,8 +33,8 @@
   "forms.OldPassword": "Old Password",
   "forms.NewPassword": "New Password",
   "forms.ConfirmPassword": "Confirm Password",
-  "name": "Full Name",
-  "familyName": "Family Name",
+  "name": "Name",
+  "familyName": "Family name",
   "fullName": "Full Name",
   "country": "Country",
   "city": "City",
