all validations done, accordion items closed on success

--- a/rest-client/public/locales/bg/translation.json
+++ b/rest-client/public/locales/bg/translation.json
@@ -2,7 +2,7 @@
   "nav.Language": "Език",
   "nav.Family": "Създай семейство",
   "countOfMembers": "Брой на членове в семейството",
-  "Family Member": "Член на семейството",
+  "Family Member": "Член ",
   "nickName": "Име / Псевдоним",
   "pin": "PIN код",
   "select": "Изберете",
